# prologue_logger

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
examples/: doc_entry_customization.rs  doc_multi_entry_first.rs  doc_multi_entry_second.rs  file.rs  indicatif.rs  log.rs  simple.rs  styles.rs
src/: error.rs  internals.rs  lib.rs  style.rs
